[package]
name = "maptide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "maptide"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.3", features = ["extension-module", "abi3-py37"] }
noodles = { version = "0.31.1", features = ["core", "bam", "sam", "bgzf"]}
